# yandex_backend_school_2022

10. Асинхронное программирование/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
10. Асинхронное программирование/app/: main.py
10. Асинхронное программирование/app/config/: __init__.py  config.py  utils.py
10. Асинхронное программирование/app/endpoints/: __init__.py  change_balance.py  get_balance.py
10. Асинхронное программирование/app/repositories/: __init__.py  changes_history.py  user_balance.py
10. Асинхронное программирование/app/services/: __init__.py
10. Асинхронное программирование/app/utils/: __init__.py  create_base_log.py
10. Асинхронное программирование/database/: create_tables.sql
4. Миграции баз данных/: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
4. Миграции баз данных/MigrationsHelper/: MigrationsHelper.py
4. Миграции баз данных/migrations/init_data/: driver.csv  spaceship.csv  spaceship_manufacturer.csv  spaceship_model.csv  spaceship_rent.csv
4. Миграции баз данных/migrations/python/: alembic.ini
4. Миграции баз данных/tests/: conftest.py  test_migration1.py  test_migration2.py  test_migration3.py
4. Миграции баз данных/tests/entities/: Driver.py  DriverV2.py  Spaceship.py  SpaceshipManufacturer.py  SpaceshipManufacturerV2.py  SpaceshipModel.py  SpaceshipRent.py
8. Архитектура распределенных систем/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
8. Архитектура распределенных систем/app/: main.py
8. Архитектура распределенных систем/app/config/: __init__.py  config.py
8. Архитектура распределенных систем/app/endpoints/: __init__.py  depends.py  token.py
8. Архитектура распределенных систем/app/exceptions/: __init__.py
8. Архитектура распределенных систем/app/services/: __init__.py  context.py  service_registry.py  statistic.py
8. Архитектура распределенных систем/app/utils/: __init__.py  get_settings.py
8. Архитектура распределенных систем/tests/: conftest.py
8. Архитектура распределенных систем/tests/test_functions/: test_context.py  test_get_alive_services.py  (+1 more)
(+252 files in other folders)
