[tool.poetry]
name = "balance"
version = "0.1.0"
description = "information of balance"
authors = ["Denis <isayan1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
pydantic = "^1.10.1"
requests = "^2.28.1"
uvicorn = "^0.18.3"
pytest = "^7.1.2"
databases = {extras = ["postgresql"], version = "^0.6.1"}
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
