[tool.poetry]
name = "homework_db_migrations"
version = "0.1.0"
description = ""
authors = ["ivanetsas <ivanetsas@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.39"
pytest = "^7.1.2"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
pydantic = "^1.9.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
